center alignment issue fix

--- a/style.less
+++ b/style.less
@@ -5,7 +5,7 @@
         }
     }
     .usquare_module_wrapper {
-        max-width:100%; 
+        max-width:960px; 
         margin:0 auto;
         position:relative;
         h3 {
@@ -166,10 +166,12 @@
     }
     @media screen and (max-width:980px) {
         .usquare_module_wrapper {
+            max-width: 640px;
         }        
     }
     @media screen and (max-width:660px) {
         .usquare_module_wrapper {
+            max-width: 320px;
         }        
     }
     @media screen and (max-width:340px) {
